[tool.poetry]
name = "chronos"
version = "0.1.0"
description = "A Zilliqa timestamping service for machines and humans"
authors = ["Cameron Sajedi <Cameronsajedi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyzil = "^1.1.10"
fastapi = "^0.49.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
